// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ImportDashboardView detects duplicate when imported JSON has different key ordering 1`] = `
<div>
  <div
    class="MuiBox-root css-tyhhe5"
  >
    <div
      class="MuiBox-root css-tq1qd4"
    >
      <div
        class="MuiBox-root css-znx1o3"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-goh84h-MuiSvgIcon-root"
          data-testid="CheckCircleOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
          />
        </svg>
        <h2
          class="MuiTypography-root MuiTypography-h2 css-1tswvm5-MuiTypography-root"
        >
          Dashboard already exists
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1 css-zb3ouh-MuiTypography-root"
        >
          <strong>
            Imported Dashboard
          </strong>
           
          is ready to view.
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-sizeMedium MuiButton-colorPrimary css-274y1b-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          View dashboard
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportDashboardView renders idle state 1`] = `
<div>
  <div
    class="MuiBox-root css-tyhhe5"
  >
    <div
      class="MuiBox-root css-tq1qd4"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2 css-1tswvm5-MuiTypography-root"
      >
        Import dashboard
      </h2>
      <p
        class="MuiTypography-root MuiTypography-body1 css-zb3ouh-MuiTypography-root"
      >
        Upload a JSON file exported from a Prism dashboard.
      </p>
      <div
        class="MuiBox-root css-1nyidl2"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1t96axh-MuiSvgIcon-root"
          data-testid="CloudUploadOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96M19 18H6c-2.21 0-4-1.79-4-4 0-2.05 1.53-3.76 3.56-3.97l1.07-.11.5-.95C8.08 7.14 9.94 6 12 6c2.62 0 4.88 1.86 5.39 4.43l.3 1.5 1.53.11c1.56.1 2.78 1.41 2.78 2.96 0 1.65-1.35 3-3 3M8 13h2.55v3h2.9v-3H16l-4-4z"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-8he3i7-MuiTypography-root"
        >
          Drag & drop a JSON file here
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-7csfbm-MuiTypography-root"
        >
          or
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeSmall MuiButton-colorPrimary css-1dy68vn-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Browse files
        </button>
        <input
          accept=".json,application/json"
          style="display: none;"
          type="file"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportDashboardView shows already-exists when imported dashboard matches one in store 1`] = `
<div>
  <div
    class="MuiBox-root css-tyhhe5"
  >
    <div
      class="MuiBox-root css-tq1qd4"
    >
      <div
        class="MuiBox-root css-znx1o3"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-goh84h-MuiSvgIcon-root"
          data-testid="CheckCircleOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
          />
        </svg>
        <h2
          class="MuiTypography-root MuiTypography-h2 css-1tswvm5-MuiTypography-root"
        >
          Dashboard already exists
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1 css-zb3ouh-MuiTypography-root"
        >
          <strong>
            Imported Dashboard
          </strong>
           
          is ready to view.
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-sizeMedium MuiButton-colorPrimary css-274y1b-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          View dashboard
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportDashboardView shows parse error for invalid JSON 1`] = `
<div>
  <div
    class="MuiBox-root css-tyhhe5"
  >
    <div
      class="MuiBox-root css-tq1qd4"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2 css-1tswvm5-MuiTypography-root"
      >
        Import dashboard
      </h2>
      <p
        class="MuiTypography-root MuiTypography-body1 css-zb3ouh-MuiTypography-root"
      >
        Upload a JSON file exported from a Prism dashboard.
      </p>
      <div
        class="MuiBox-root css-1nyidl2"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1t96axh-MuiSvgIcon-root"
          data-testid="CloudUploadOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96M19 18H6c-2.21 0-4-1.79-4-4 0-2.05 1.53-3.76 3.56-3.97l1.07-.11.5-.95C8.08 7.14 9.94 6 12 6c2.62 0 4.88 1.86 5.39 4.43l.3 1.5 1.53.11c1.56.1 2.78 1.41 2.78 2.96 0 1.65-1.35 3-3 3M8 13h2.55v3h2.9v-3H16l-4-4z"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-8he3i7-MuiTypography-root"
        >
          Drag & drop a JSON file here
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-7csfbm-MuiTypography-root"
        >
          or
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeSmall MuiButton-colorPrimary css-1dy68vn-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Browse files
        </button>
        <input
          accept=".json,application/json"
          style="display: none;"
          type="file"
        />
      </div>
      <div
        class="MuiBox-root css-1qn6rzw"
      >
        <div
          class="MuiBox-root css-1o0ljzr"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-13knikv-MuiSvgIcon-root"
            data-testid="ErrorOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
            />
          </svg>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1xszczh-MuiTypography-root"
          >
            Invalid dashboard file
          </h6>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1158u9z-MuiTypography-root"
        >
          Could not parse file as JSON.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportDashboardView shows success after a valid dashboard file is imported 1`] = `
<div>
  <div
    class="MuiBox-root css-tyhhe5"
  >
    <div
      class="MuiBox-root css-tq1qd4"
    >
      <div
        class="MuiBox-root css-znx1o3"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-goh84h-MuiSvgIcon-root"
          data-testid="CheckCircleOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
          />
        </svg>
        <h2
          class="MuiTypography-root MuiTypography-h2 css-1tswvm5-MuiTypography-root"
        >
          Import complete
        </h2>
        <p
          class="MuiTypography-root MuiTypography-body1 css-zb3ouh-MuiTypography-root"
        >
          <strong>
            Imported Dashboard
          </strong>
           
          is ready to view.
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-sizeMedium MuiButton-colorPrimary css-274y1b-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          View dashboard
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportDashboardView shows validation error when JSON fails schema checks 1`] = `
<div>
  <div
    class="MuiBox-root css-tyhhe5"
  >
    <div
      class="MuiBox-root css-tq1qd4"
    >
      <h2
        class="MuiTypography-root MuiTypography-h2 css-1tswvm5-MuiTypography-root"
      >
        Import dashboard
      </h2>
      <p
        class="MuiTypography-root MuiTypography-body1 css-zb3ouh-MuiTypography-root"
      >
        Upload a JSON file exported from a Prism dashboard.
      </p>
      <div
        class="MuiBox-root css-1nyidl2"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1t96axh-MuiSvgIcon-root"
          data-testid="CloudUploadOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96M19 18H6c-2.21 0-4-1.79-4-4 0-2.05 1.53-3.76 3.56-3.97l1.07-.11.5-.95C8.08 7.14 9.94 6 12 6c2.62 0 4.88 1.86 5.39 4.43l.3 1.5 1.53.11c1.56.1 2.78 1.41 2.78 2.96 0 1.65-1.35 3-3 3M8 13h2.55v3h2.9v-3H16l-4-4z"
          />
        </svg>
        <p
          class="MuiTypography-root MuiTypography-body1 css-8he3i7-MuiTypography-root"
        >
          Drag & drop a JSON file here
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-7csfbm-MuiTypography-root"
        >
          or
        </p>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-sizeSmall MuiButton-colorPrimary css-1dy68vn-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Browse files
        </button>
        <input
          accept=".json,application/json"
          style="display: none;"
          type="file"
        />
      </div>
      <div
        class="MuiBox-root css-1qn6rzw"
      >
        <div
          class="MuiBox-root css-1o0ljzr"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-13knikv-MuiSvgIcon-root"
            data-testid="ErrorOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
            />
          </svg>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 css-1xszczh-MuiTypography-root"
          >
            Invalid dashboard file
          </h6>
        </div>
        <p
          class="MuiTypography-root MuiTypography-body1 css-1158u9z-MuiTypography-root"
        >
          Invalid dashboard configuration: firstColumn.0.type: Invalid input
        </p>
      </div>
    </div>
  </div>
</div>
`;
